<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">iCartas</string>
    <string name="home">Home</string>
    <string name="cards">Cards</string>
    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>

    <string name="review">Review</string>
    <string name="mace_name">mace_name</string>
    <string name="again">Again</string>
    <string name="hard">Hard</string>
    <string name="good">Good</string>
    <string name="easy">Easy</string>
    <string name="NoDeck">You have no decks yet.</string>
    <string name="element_text">element_text</string>
    <!-- Preference Titles -->
    <string name="cards_header"><b>Cards</b></string>
    <string name="interface_header"><b>Interface</b></string>
    <string name="account_header"><b>User</b></string>
    <string name="help_header"><b>Help center</b></string>
    <!-- Cards Preferences -->
    <string name="number_title">Daily cards</string>
    <!-- Interface Preferences -->
    <string name="theme">Switch theme</string>
    <string name="theme_summary">Turn on to change app theme</string>
    <string name="language">Supported languages</string>
    <!-- Account Preferences -->
    <string name="alias">Alias</string>
    <string name="defaultAlias">Set your alias</string>
    <!-- Account Help Center -->
    <string name="aboutus_title">About us</string>
    <string name="contact_title">Contact with us</string>
    <!-- Strings para el fragment card -->
    <string name="front_of_card">Front</string>
    <string name="back_of_card">Back</string>
    <string name="fab_add_card">Add card</string>
    <string name="fab_add_deck">New deck</string>
    <string name="fab_edit_deck">Edit deck</string>
    <string name="btn_add">Add</string>
    <string name="txt_deck">Deck</string>
    <string name="txt_deck_name">Deck name</string>
    <string name="add_deck">Add deck</string>
    <string name="edit_card">Edit card</string>
    <string name="delete_card">Delete card</string>
    <string name="edit_deck">Edit deck</string>
    <string name="delete_deck">Delete deck</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_cancel">Cancel</string>
    <string name="msg_add_deck">You are about to add the deck named</string>
    <string name="msg_edit_deck">You are about to rename the deck</string>
    <string name="msg_delete_deck">You are about to delete the deck</string>
    <string name="msg_delete_card">You are about to delete the card</string>
    <string name="msg_snack_add_deck">Deck successfully added</string>
    <string name="msg_snack_edit_deck">Deck successfully edited</string>
    <string name="msg_snack_deleted_deck">Deck successfully deleted</string>
    <string name="msg_toast_empty"> Please don\'t leave the deck name blank</string>
    <string name="msg_snack_add_card">Card successfully added to your deck</string>
    <string name="msg_snack_edit_card">Card successfully edited and saved into your deck</string>
    <string name="msg_toast_noMaze">Please create a deck before adding cards</string>
    <string name="msg_toast_noSelectedMaze">Please select a deck </string>
    <string name="msg_toast_noMaze_to_delete">Please create a deck before trying to delete one</string>
    <string name="msg_toast_noMaze_to_changeName">Please create a deck before trying to rename one</string>
    <string name="msg_toast_card_noText">Please don\'t leave the front or back of the card blank</string>
    <string name="to">" to "</string>
    <!-- Strings para el fragment Home -->
    <string name="minimun_deck_size">Please add 20 cards to your deck</string>

    <string name="version">Current version: </string>
    <string name="versiontitle"><i>Version</i></string>
    <string name="backHome">GO BACK HOME</string>

    <string name="connect">Connect with us</string>
    <string name="find_us">Find our app</string>

    <string name="change_language">Change language</string>
    <string name="change_language2">You might be trying to change app language. Open language settings?</string>


    <string name="contactus_description">In this page there are all posible medias you can contact us by. \n
    In case you notice a bug, wish to propose an improvement or want to give feedback, you can choose one of these in order to leave a comment.
    Also, you can see our websites.\n \n <b>iCartas Team</b> </string>
    <string name="aboutus_description">iCartas has been developed by three young students from the course named "Computación Móvil" which is taught at ETSII, the computer engineering school from Seville University. Our goal always has been to create a free, open app that could be as useful as easy to use in terms of learning for the user.
        We hope you enjoy the app, and thank you very much for your support. \n \n <b>iCartas Team</b> </string>
    <string name="cards_fragment">Hello card fragment</string>
    <string name="textview">No decks to practice</string>

<!--    statistics-->
    <string name="statisticsCardsByDeck">Cards by deck</string>Cards by deck />
    <string name="statisticsDataSetName">Decks</string>Decks/>
    <string name="chartData">No data found</string>
    <string name="statisticsRepetitionsByDeck">Nº of times you see a card by Deck</string>

    <string name="messageToAliasPart1">Hello</string>
    <string name="messageToAliasPart2">this is the list of decks for you to review today</string>

    <string name="buttonPieChart">PIE</string>
    <string name="buttonBarChart">BAR</string>

</resources>