<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/cards_header"
        android:layout="@layout/preferences_category">
        <ListPreference
            android:id="@+id/daily_cards"
            android:icon="@drawable/baseline_style_24"
            app:defaultValue="20"
            app:entries="@array/cardsNumber_entries"
            app:entryValues="@array/cardsNumber_values"
            app:key="daily_cards"
            app:title="@string/number_title"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/interface_header"
        android:layout="@layout/preferences_category">
        <SwitchPreferenceCompat
            android:id="@+id/theme"
            android:icon="@drawable/baseline_aod_24"
            app:defaultValue="false"
            app:key="theme"
            app:summary="@string/theme_summary"
            app:title="@string/theme"/>

        <DropDownPreference
            android:id="@+id/language"
            android:icon="@drawable/baseline_language_24"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:key="language"
            app:title="@string/language"
            app:useSimpleSummaryProvider="false"
            />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/account_header"

        android:layout="@layout/preferences_category">
        <EditTextPreference
            android:id="@+id/alias"
            android:icon="@drawable/baseline_account_circle_24"
            app:key="alias"
            app:title="@string/alias"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="@string/defaultAlias" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/help_header"
        android:layout="@layout/preferences_category">
        <Preference
            android:id="@+id/about_us"
            android:icon="@drawable/baseline_help_center_24"
            app:key="about_us"
            app:title="@string/aboutus_title"/>
        <Preference
            android:id="@+id/contact_us"
            android:icon="@drawable/baseline_alternate_email_24"
            app:key="contact"
            app:title="@string/contact_title" />
    </PreferenceCategory>
</PreferenceScreen>